--- a/src/routes/About/styles.scss
+++ b/src/routes/About/styles.scss
@@ -14,10 +14,6 @@
         white-space: pre-wrap;
         margin: 0;
         text-align: justify;
-        @media screen and (max-width: 900px) {
-            padding-left: 10%;
-            padding-right: 10%;
-        }
         padding-bottom: 50px;
     }
 }
