--- a/src/routes/Project/styles.scss
+++ b/src/routes/Project/styles.scss
@@ -1,5 +1,7 @@
 .project {
     padding-top: 32px;
+    padding-left: 15px;
+    padding-right: 15px;
     .infos {
         h3 {
             text-align: center;
